# BA_Assistant

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  RUNBOOK.md  SECURITY.md  app.py  ba_assist.py  ba_assist_streamlit_modified.py  ba_assist_streamlit_modified_visualization.py  deepseek_requirement_analysis_app.py  improved_requirement_analysis_app.py  migration.sql  payment.py  preflight.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements.in  requirements.txt  run_analysis_cli.py
.github/: pull_request_template.md
.streamlit/: config.toml  secrets.toml.example
archive/: ba_assist_streamlit.py  ba_assist_streamlit_modified.py  ba_assistant_paid.py
core/: __init__.py  analyzer.py  config.py
docs/: THREAT_MODEL.md
scripts/: health_monitor.py  pre_push_check.sh  quality.sh
services/: __init__.py  error_logging.py  history_store.py  report_utils.py
specs/: otp_length_fix_spec.md  payment_auth_coverage_push_spec.md  phase2_architecture_slice1_spec.md  phase2_architecture_slice2_spec.md  phase2_architecture_slice3_spec.md  production_hardening_phase1_spec.md  streamlined-production-spec.md
tests/: conftest.py  test_95_push.py  test_analyzer_core.py  test_analyzer_gaps.py  test_app_helpers.py  test_app_rendering.py  test_app_runtime_helpers.py  test_apptest_rendering.py  test_apptest_ui.py  test_coverage_gaps.py  test_error_logging.py  test_final_gaps.py  test_final_push.py  test_integration.py  test_payment.py  test_regression.py  test_requirements_flow.py  test_safe_write_line.py  test_smoke.py
ui/: requirements_flow.py
(+2 files in other folders)
