[project]
name = "ba-assistant"
version = "0.1.0"
description = "AI copilot that converts raw requirements into structured BA and Product Owner artifacts."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Touseef Shaik" }]
dynamic = ["dependencies"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["archive"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
